--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -1,12 +1,15 @@
 .Header {
-  padding: 20px 0;
+  padding: 48px 0 34px 0;
   margin: 0 auto;
   text-align: center;
 }
 
 .Header h1 {
+  margin: 24px 0 0 0;
   color: #143b6b;
-  font-weight: 800;
+  font-weight: 700;
+  font-size: 32px;
+  font-family: Aesop;
 }
 
 .logo path {
